<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/add_task_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/add_task"
        android:textColor="@color/very_dark_blue"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_heading_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_task_tv"
        android:layout_marginHorizontal="25dp"
        app:boxBackgroundColor="@color/dark_blue_bg"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_heading_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            android:inputType="textShortMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_desc_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_heading_til"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/dark_blue_bg"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_desc_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/task_description"
            android:inputType="textMultiLine"
            android:minLines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/task_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spinner"
        android:layout_alignTop="@+id/spinner"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/task_type"
        android:textColor="@color/very_dark_blue"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_desc_til"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/task_type_tv" />

    <androidx.cardview.widget.CardView
        android:id="@+id/date_time_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_type_tv"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:cardElevation="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_til_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="5"
                app:boxBackgroundColor="@color/dark_blue_bg"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_et_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/time_til_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="5"
                app:boxBackgroundColor="@color/dark_blue_bg"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/time_et_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/add_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_time_card"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/alan_blue"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progress_bar_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/add_task_button"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/add_task_button"
        android:indeterminateTint="@color/alan_blue"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_task_button"
        android:layout_alignTop="@+id/add_task_button"
        android:layout_marginStart="25dp"
        android:paddingHorizontal="10dp"
        android:text="@string/cancel"
        android:textColor="@color/alan_blue"
        android:textSize="16sp" />
</RelativeLayout>