<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".TimerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_timer"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:progress="100"
            android:progressDrawable="@drawable/timer_ring" />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/progress_timer"
            android:layout_alignTop="@+id/progress_timer"
            android:layout_alignEnd="@+id/progress_timer"
            android:layout_alignBottom="@+id/progress_timer"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="40dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/timer_initial"
            android:textColor="@color/very_dark_blue"
            android:textSize="50sp" />

        <ImageButton
            android:id="@+id/pause_btn_timer"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/play_button_shape"
            android:contentDescription="@string/pause_or_play_button"
            android:elevation="10dp"
            android:src="@drawable/ic_round_pause"
            android:visibility="invisible" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/play_btn_timer"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/play_button_shape"
                    android:contentDescription="@string/pause_button"
                    android:elevation="10dp"
                    android:src="@drawable/ic_round_play"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/stop_btn_timer"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/stop_btn_timer"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/play_button_shape"
                    android:contentDescription="@string/stop_button"
                    android:elevation="10dp"
                    android:src="@drawable/ic_round_stop"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/play_btn_timer"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>